--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,12 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "mongoose": "^6.1.3",
+    "mongoose": "^6.1.4",
     "passport": "^0.5.2"
   }
 }
